@@ -8,7 +8,8 @@ about future releases, check `milestones`_ and :doc:`/about/vision`.
 0.9 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Add a default timeout to 15 seconds to the client
+
 
 
 0.8 (2020-09-07)
